--- a/data/index.html
+++ b/data/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
-    <script type="module" crossorigin src="/assets/index.8e9b1451.js"></script>
-    <link rel="stylesheet" href="/assets/index.35e49caf.css">
+    <title>LogMe</title>
+    <script type="module" crossorigin src="/assets/index.cc003498.js"></script>
+    <link rel="stylesheet" href="/assets/index.2e55247d.css">
   </head>
   <body>
     <div id="app"></div>
