--- a/web/logme-web/index.html
+++ b/web/logme-web/index.html
@@ -12,6 +12,7 @@
         document.documentElement.classList.remove('dark')
       }
     </script>
+    <script src="./node_modules/flowbite/dist/flowbite.js"></script>
     <title>LogMe</title>
   </head>
   <body>
