--- a/data/index.html
+++ b/data/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+      if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark');
+      } else {
+        document.documentElement.classList.remove('dark')
+      }
+    </script>
+
     <title>LogMe</title>
-    <script type="module" crossorigin src="/assets/index.8b744914.js"></script>
-    <link rel="stylesheet" href="/assets/index.1738f417.css">
+    <script type="module" crossorigin src="/assets/index.da38aa5e.js"></script>
+    <link rel="stylesheet" href="/assets/index.f9e0f66d.css">
   </head>
   <body>
     <div id="app"></div>
+    <script  src="./node_modules/flowbite/dist/flowbite.js"></script>
     
   </body>
 </html>
